Create dotnet project for data layer

--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\StoreModels\StoreModels.csproj" />
     <ProjectReference Include="..\StoreUI\StoreUI.csproj" />
+    <ProjectReference Include="..\StoreData\StoreData.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
