Add IsManager field to Customer entity and model

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.userosscache
 *.sln.docstates
 appsettings.json
+QueryTesting.sql
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
